Redoing portfolio website

--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewpoint" content="width=device-width,inital-scale=1.0">
+        <title>Susruth Puppala Portfolio Website</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 <meta charset="UTF-8">
 
 <body>
 
+    <header class="header">
+        <a href="#" class="logo">Susruth Puppala.</a>
+
+
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">Projects</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+
+    <section class="home">
+        <div class="home-content">
+            <h1>
+                Hi, I'm Susruth a computer sciencee from University of Portsmouth with an interest in software development.
+            </h1>
+            <h2>
+                Gradute Software Devleoper
+            </h2>
+        </div>
+    </section>
+    <!-- 
     <h1>ABHIRAMA SUSRUTH PUPPALA</h1>
 
-    <h2>A computer science graduate from University of Portsmouth with an interest in software development.</h2>
+    <h2></h2>
 
     <h3>Here are some of the projects I have done:</h3>
     <dl>
@@ -27,9 +53,9 @@
             </dd>
     </dl>
 
-    <a href="https://www.linkedin.com/in/abhirama-susruth-puppala-09b1b5195/">Linked In</a> <br>
+    <a href="https://www.linkedin.com/in/abhirama-susruth-puppala-09b1b5195/">LinkedIn</a> <br>
     
-    <a href="https://github.com/patekOnlyPrograms">Github</a>
+    <a href="https://github.com/patekOnlyPrograms">Github</a> -->
 
 
 
