adding more CSS and refining HTML

--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
             <a href="#" class="active">Home</a>
             <a href="#">Projects</a>
             <a href="#">Contact</a>
+            <a href="#">Blog</a>
         </nav>
     </header>
 
     <section class="home">
         <div class="home-content">
             <h1>
-                Hi, I'm Susruth a computer sciencee from University of Portsmouth with an interest in software development.
+                Susruth Puppala
             </h1>
-            <h2>
+            <h3>
                 Gradute Software Devleoper
+            </h3>
+            <h2>
+                Hi, I'm Susruth a computer science from University of Portsmouth with an interest in software development.
+                With experience in technical support and software development.
             </h2>
+           
         </div>
     </section>
     <!-- 
