added new projects page and linked up nav bar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
         <nav class="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="#">Projects</a>
+            <a href="/index.html" class="active">Home</a>
+            <a href="/projects.html">Projects</a>
             <a href="#">Contact</a>
             <a href="#">Blog</a>
         </nav>
@@ -38,33 +38,6 @@
            
         </div>
     </section>
-    <!-- 
-    <h1>ABHIRAMA SUSRUTH PUPPALA</h1>
-
-    <h2></h2>
-
-    <h3>Here are some of the projects I have done:</h3>
-    <dl>
-        <dt>Travel Diary</dt>
-            <dd>Mobile application that should keep people moving 
-            and help them to discover new places. Created as a final
-            year project for university</dd>
-        <dt>Decision Map Horror Game</dt>
-            <dd>A text based horror game using linked lists and csv
-                files to navigate through a maze.</dd>
-        <dt>Alcohol Finder Application</dt>
-            <dd>An application that would find local pubs and show
-                what drinks they had. This app would also allow you to
-                create pub crawls using the pubs found.
-            </dd>
-    </dl>
-
-    <a href="https://www.linkedin.com/in/abhirama-susruth-puppala-09b1b5195/">LinkedIn</a> <br>
-    
-    <a href="https://github.com/patekOnlyPrograms">Github</a> -->
-
-
-
 </body>
 
 </html>
