Added other pages to nav bar

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav class="navbar">
             <a href="/index.html" class="active">Home</a>
             <a href="/projects.html">Projects</a>
-            <a href="#">Contact</a>
-            <a href="#">Blog</a>
+            <a href="/contact.html">Contact</a>
+            <a href="/blog.html">Blog</a>
         </nav>
     </header>
 
