--- a/projects.html
+++ b/projects.html
@@ -14,14 +14,17 @@
         <nav class="navbar">
             <a href="/index.html">Home</a>
             <a href="/projects.html" class="active">Projects</a>
-            <a href="#">Contact</a>
-            <a href="#">Blog</a>
+            <a href="/contact.html">Contact</a>
+            <a href="/blog.html">Blog</a>
         </nav>
     </header>
 
     <section class="projects">
         <div class="projects-content">
-            <h3>Here are some of the projects I have done:</h3>
+            <!-- 
+                make the projects tab into a grid.
+             -->
+            <h1>Here are some of the projects I have done:</h3>
             <dl>
                 <dt>Travel Diary</dt>
                     <dd>
